packages/next-swc/crates/core/tests/errors/next-dynamic/no-arguments/output.js
import dynamic from 'next/dynamic'

const DynamicComponent = dynamic()
