packages/next-swc/crates/core/tests/errors/next-dynamic/no-arguments/output.stderr
error: next/dynamic requires at least one argument
 --> input.js:3:26
  |
3 | const DynamicComponent = dynamic()
  |                          ^^^^^^^

